minimal api: crud enpoints

--- a/tests/specification/specification.csproj
+++ b/tests/specification/specification.csproj
@@ -27,4 +27,8 @@
       <ProjectReference Include="..\..\src\Quickie\Quickie.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="MinimalApis\" />
+    </ItemGroup>
+
 </Project>
