--- a/src/Quickie/Quickie.csproj
+++ b/src/Quickie/Quickie.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/sushantpt/Quickie</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>api, backend, web</PackageTags>
-    <PackageReleaseNotes>Initial publish.</PackageReleaseNotes>
+    <PackageReleaseNotes>Support for minial apis.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageIcon>quickie_icon.png</PackageIcon>
   </PropertyGroup>
