--- a/src/Quickie/Quickie.csproj
+++ b/src/Quickie/Quickie.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.2.0</Version>
+    <Version>1.2.1</Version>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -13,7 +13,7 @@
     <RepositoryUrl>https://github.com/sushantpt/Quickie</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>api, backend, web</PackageTags>
-    <PackageReleaseNotes>Updated internal dependencies, enabled documentation on hover for better dev experience. </PackageReleaseNotes>
+    <PackageReleaseNotes>Updated internal dependencies, added doc comment etc. </PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageIcon>quickie_icon.png</PackageIcon>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -22,9 +22,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.RateLimiting" Version="7.0.0-rc.2.22476.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
-    <PackageReference Include="System.Threading.RateLimiting" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
+    <PackageReference Include="System.Threading.RateLimiting" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
